--- a/End of the year.css
+++ b/End of the year.css
@@ -3,12 +3,12 @@ body {
     margin: 0;
     background: white;
     width: 100%;
-    font-size: 30px;
+    font-size: 20px;
 }
 
 p { 
     font-family: Roboto; 
-    font-size: 30px;
+    font-size: 20px;
     margin: 0px;
    }
 
@@ -28,24 +28,14 @@ p {
     position: absolute;
 }
 
-.bodyObjectimg {
-    height: 100%;
-    transform: translateX(-50%);
-    left: 50%;
-    position: absolute;
-}
-
 .bodyObjectpadding {
     padding: 20px;
 }
 
-.buttonDecoration{
-    width: 160px;
-    height: 35px;
-    background: lightgrey;
-    border: none;
-    cursor: pointer;
-}
+
+img {margin: 30px;
+    position: absolute;
+    float: right;}
 
 .rainbow_text {
     background-image: linear-gradient(to left,  violet, indigo, blue, green, yellow, orange, red); -webkit-background-clip: text;
