--- a/End of the year.css
+++ b/End of the year.css
@@ -41,3 +41,27 @@ img {margin: 30px;
     background-image: linear-gradient(to left,  violet, indigo, blue, green, yellow, orange, red); -webkit-background-clip: text;
     color: transparent;
   }
+  .aboutWrapper { width: 100%; height: 100vh; position: absolute; cursor: pointer;}
+.navWrapper {
+    width:100%; 
+    height: 160px; 
+    background: grey; 
+    display:-webkit-box;
+}
+
+.navWrapper_1 {
+    width: 40%; 
+    height: 100%;
+    background: grey;
+    text-align: center;
+    color: black;
+    font-size: 25px;
+}
+.navWrapper_2 {
+    width: 20%; 
+    height: 100%;
+    background: grey;
+    text-align: center;
+    color: black;
+    font-size: 25px
+}
