--- a/End of the year.css
+++ b/End of the year.css
@@ -4,6 +4,7 @@ body {
     background: white;
     width: 100%;
     font-size: 20px;
+    height 300px;
 }
 
 p { 
@@ -40,6 +41,7 @@ img {margin: 30px;
 .rainbow_text {
     background-image: linear-gradient(to left,  violet, indigo, blue, green, yellow, orange, red); -webkit-background-clip: text;
     color: transparent;
+    position: relative;
   }
   .aboutWrapper { width: 100%; height: 100vh; position: absolute; cursor: pointer;}
 .navWrapper {
@@ -55,7 +57,7 @@ img {margin: 30px;
     background: grey;
     text-align: center;
     color: black;
-    font-size: 25px;
+    font-size: 30px;
 }
 .navWrapper_2 {
     width: 20%; 
@@ -63,5 +65,5 @@ img {margin: 30px;
     background: grey;
     text-align: center;
     color: black;
-    font-size: 25px
+    font-size: 30px
 }
