--- a/End of the year.css
+++ b/End of the year.css
@@ -1,10 +1,11 @@
-import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+import url ('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 body {
     margin: 0;
     background: white;
     width: 100%;
-    font-size: 20px;
-    height 300px;
+    font-size:20px;
+    height: 300px;
 }
 
 p { 
