--- a/End of the year.css
+++ b/End of the year.css
@@ -1,5 +1,4 @@
 import url ('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-
 body {
     margin: 0;
     background: white;
@@ -25,9 +24,7 @@ p {
 
 .bodyObject {
     width: 50%;
-    height: 300px;
     font-size: 30px;
-    position: absolute;
 }
 
 .bodyObjectpadding {
@@ -44,13 +41,13 @@ img {margin: 30px;
     color: transparent;
     position: relative;
   }
-  .aboutWrapper { width: 100%; height: 100vh; position: absolute; cursor: pointer;}
 
   .navWrapper {
     width:100%; 
-    height: 160px; 
+    height: 120px; 
     background: grey; 
     display:-webkit-box;
+    cursor:pointer;
 }
 
 .navWrapper_1 {
